Configure logging during test execution using log4j (#74) (#84)
JUnit uses JUL as its logging framework. When testing extensions, we often need to check for error cases that sometimes produce quite verbose console output when running the Gradle build. Thus, we should add the necessary dependencies to redirect JUL to log4j2 and add a basic log4j config file.

This PR provides the necessary configuration to suppress unnecessary output from JUnit during test execution, e.g. for error cases that are tested explicitly.

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.2.1'
+
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.11.0'
 }
 
 buildscript {
@@ -55,6 +58,7 @@ test {
     filter {
         includeTestsMatching "*Tests"
     }
+    systemProperty 'java.util.logging.manager', 'org.apache.logging.log4j.jul.LogManager'
 }
 
 spotless {
