Simplify Gradle publishing configuration
 - Let Gradle set up task dependencies for sourcesJar and javadocJar
   automatically
 - Upgrade to Gradle 4.8 to use built-in support for signing
   publications and configuring the POM
 - Use single publishing repo and remove custom configuration that
   ensured that only snapshots were published to the snapshot repo and
   releases to the staging repo

Resolves: #83
PR: #88

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: ./gradlew publishSnapshot -P mavenUserName=$MAVEN_USER_NAME -P mavenPassword=$MAVEN_PASSWORD --stacktrace
+    script: ./gradlew publish -P mavenUserName=$MAVEN_USER_NAME -P mavenPassword=$MAVEN_PASSWORD --stacktrace
     on:
       branch: master
       jdk: oraclejdk8
