Remove '$' from package and automatic module name
JUnit Pioneer owns the domain junit-pioneer.org, so the default for
package and (automatic) module names is org.junit-pioneer.
Unfortunately, neither package nor module names can contain a dash.
The only half-way sensible ways to separate two words are:

* not at all
* underscore
* dollar sign

I initially went with `$` (see 3e84191 / #45), but soon concerns were
voiced:

* The JLS states:

    > The $ character should be used only in mechanically generated
    > source code or, rarely, to access pre-existing names on legacy
    > systems.

* Vague worries about `$`, a placeholder in many scripting languages
  and terminals, causing problems down the road; either for us or
  downstream projects and users.
* Many people dislike the dollar sign in the package name (see [1])
  and nobody except for me really liked it (see #24).

In the end, I didn't want to insist and since everybody agrees that
`org.junit_pioneer` is ugly (again, see #24), we settled on
`org.junitpioneer`.

Issue: #24
PR: #91
[1]: https://twitter.com/nipafx/status/1003547161248845824

--- a/build.gradle
+++ b/build.gradle
@@ -109,7 +109,7 @@ javadoc.shouldRunAfter test
 jar {
     manifest {
         attributes(
-            'Automatic-Module-Name': 'org.junit$pioneer'
+            'Automatic-Module-Name': 'org.junitpioneer'
         )
     }
 }
@@ -205,7 +205,7 @@ wrapper {
     jarFile = file('.infra/gradle/gradle-wrapper.jar')
 }
 
-task triggerSiteBuild(type: org.junit$pioneer.gradle.TriggerTravisTask) {
+task triggerSiteBuild(type: org.junitpioneer.gradle.TriggerTravisTask) {
     travisProject = "junit-pioneer/junit-pioneer.github.io"
     branch = "grandmaster"
     apiToken = travisApiToken
