Introduce Shipkit-based continuous delivery
Starting with this commit, all changes made to the project that
result in a different binary artifact to the last published one
will lead to new release of this project.

To achieve this continuous delivery behavior, Shipkit is introduced:

  You will be more productive if your releases are fully automated
  and happen on every change. You will build great product if you
  can focus on code & features, but not on the release overhead.

For details see: https://github.com/mockito/shipkit

Bintray: https://bintray.com/junit-pioneer/junit-pioneer/junit-pioneer
Repository: https://dl.bintray.com/junit-pioneer/junit-pioneer

Closes: #87

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
-group 'org.junit-pioneer'
-version '0.1-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'checkstyle'
+    id 'maven-publish'
+    id 'com.diffplug.gradle.spotless' version '3.13.0'
+    id 'org.shipkit.java' version '2.0.26'
+}
 
-apply plugin: 'java'
-apply plugin: 'com.diffplug.gradle.spotless'
-apply plugin: 'checkstyle'
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
+group 'org.junit-pioneer'
 
 sourceCompatibility = 1.8
 
@@ -38,20 +39,6 @@ dependencies {
 
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.11.0'
-}
-
-buildscript {
-    repositories {
-        mavenLocal()
-        maven {
-            name "GradlePlugins"
-            url 'https://plugins.gradle.org/m2/'
-        }
-    }
-
-    dependencies {
-        classpath group: 'com.diffplug.spotless', name: 'spotless-plugin-gradle', version: '3.12.0'
-    }
 }
 
 test {
@@ -114,17 +101,6 @@ jar {
     }
 }
 
-// create sources and JavaDoc JARs
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
 tasks.withType(Jar) {
     from(projectDir) {
         include 'LICENSE.md'
@@ -134,14 +110,6 @@ tasks.withType(Jar) {
 
 artifacts {
     archives javadocJar, sourcesJar
-}
-
-signing {
-    sign publishing.publications
-}
-
-tasks.withType(Sign) {
-    onlyIf { isReleaseVersion }
 }
 
 publishing {
