Fix Maven Central Sync step
- Fix Maven Central Sync step by using correct environment
variables to authenticate with Nexus via tokens.
- Add missing attributes to the generated pom.xml file to
prevent the following error:
  Maven Central: HTTP/1.1 400 Bad Request
  Invalid POM: [...]/junit-pioneer-${version}.pom
  - Project description missing
  - Developer information missing,

Force Shipkit to publish the release even though
there are no changes since the previous release.

[ci skip-compare-publications]

Issue: #87

--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -6,6 +6,9 @@ shipkit {
    gitHub.repository = 'junit-pioneer/junit-pioneer' // https://github.com/junit-pioneer/junit-pioneer
    gitHub.readOnlyAuthToken = '584daca204258e2a397d0c029010732a994382dd'
    gitHub.writeAuthToken = System.getenv('GITHUB_WRITE_TOKEN')
+
+   // Needed for uploading to Maven Central
+   team.developers = ['nicolaiparlog:Nicolai Parlog']
 }
 
 allprojects {
@@ -26,8 +29,8 @@ allprojects {
                version {
                    mavenCentralSync {
                        sync = true
-                       user = System.getenv('NEXUS_USERNAME')
-                       password = System.getenv('NEXUS_PASSWORD')
+                       user = System.getenv('NEXUS_TOKEN_USERNAME')
+                       password = System.getenv('NEXUS_TOKEN_PASSWORD')
                    }
                }
            }
