--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -4,3 +4,5 @@
         url: /docs/vintage-test/
       - title: TempDirectory
         url: /docs/temp-directory/
+      - title: @DefaultLocale and @DefaultTimeZone
+        url: /docs/default-locale-timezone/
