Fix broken site build be wrapping titles in quotes
Prior to this commit titles weren't wrapped in quotes.
This led to errors when building the documentation
web pages.
Using double quotes to wrap the titles fixes the issue.

Fixes: #116
PR: #119

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -1,8 +1,8 @@
   - title: Features
     children:
-      - title: Vintage @Test
+      - title: "Vintage @Test"
         url: /docs/vintage-test/
-      - title: TempDirectory
+      - title: "TempDirectory"
         url: /docs/temp-directory/
-      - title: @DefaultLocale and @DefaultTimeZone
+      - title: "@DefaultLocale and @DefaultTimeZone"
         url: /docs/default-locale-timezone/
