Properly onfigure build scans
The build option `-Dscan` leads to the following message by Gradle:

> Build scan cannot be created because the build scan plugin was not applied.
> For more information on how to apply the build scan plugin, please visit https://gradle.com/scans/help/gradle-cli.

This is fixed by changing it to --scan. It is also necessary to
further configure the scan to accept the license agreement; otherwise
the build requires manual confirmation.

Fixes: #118
PR: #122

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ branches:
 script:
   - java -version
   - ./gradlew -version
-  - ./gradlew --refresh-dependencies --stacktrace -Dscan clean build
+  - ./gradlew --refresh-dependencies --stacktrace --scan clean build
 
 deploy:
   - provider: script
