--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.diffplug.gradle.spotless' version '3.13.0'
     id 'org.shipkit.java' version '2.0.26'
     id 'at.zierler.yamlvalidator' version '1.5.0'
+    id 'com.gradle.build-scan' version '1.16'
 }
 
 group 'org.junit-pioneer'
@@ -40,6 +41,11 @@ dependencies {
 
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.11.0'
+}
+
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
 }
 
 test {
