Disable site build
Due to authentication issues the site build is disabled for now.

[ci skip-compare-publications]

Issue: #124

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,12 +48,12 @@ deploy:
     on:
       branch: master
       jdk: oraclejdk8
-  - provider: script
-    skip_cleanup:
-    script: ./gradlew triggerSiteBuild -P travisApiToken=$TRAVIS_API_TOKEN --stacktrace
-    on:
-      branch: master
-      jdk: oraclejdk8
+# - provider: script
+#   skip_cleanup:
+#   script: ./gradlew triggerSiteBuild -P travisApiToken=$TRAVIS_API_TOKEN --stacktrace
+#   on:
+#     branch: master
+#     jdk: oraclejdk8
 
 env:
   global:
