--- a/build.gradle
+++ b/build.gradle
@@ -30,17 +30,17 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.1'
-    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.1.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.1.1'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.1.1'
 
-    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.2.1'
-    testCompile group: 'com.google.jimfs', name: 'jimfs', version: '1.1'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.5.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.2.1'
+    testImplementation group: 'com.google.jimfs', name: 'jimfs', version: '1.1'
 
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.11.0'
+    testRuntimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    testRuntimeOnly group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.11.0'
 }
 
 buildScan {
