Let Shipkit create proper GitHub releases
While Shipkit creates releases to Bintray, it doesn't attach
artifacts to it. With this change, Shipkit will release
the library itself, its sources and Javadoc JARs to GitHub.

Resolves: #148
PR: #151

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,13 @@ deploy:
     on:
       branch: master
       jdk: openjdk8
+  - provider: releases
+    api_key: "${GITHUB_WRITE_TOKEN}"
+    skip_cleanup: true
+    file_glob: true
+    file: "./build/libs/junit-pioneer-*.jar"
+    on:
+      tags: true
   - provider: script
     skip_cleanup:
     script: ./gradlew triggerSiteBuild -P travisApiToken=$TRAVIS_API_TOKEN --stacktrace
