Add range argument sources
This PR adds a series of argument source that provide ranges
of primitive numerical values to be used with JUnit Jupiter's
@ParameterizedTest. The annotations are @ByteRangeSource,
@ShortRangeSource, @IntRangeSource, @LongRangeSource,
@FloatRangeSource, and @DoubleRangeSource.

All these annotations follow the same form:

@IntRangeSource(to, from, step, closed)

If step is omitted, a default of 1 is taken. If closed is omitted, a
default of false is taken.

Closes #44

[ci skip-release]

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -10,3 +10,5 @@
         url: /docs/repeat-failed-test
       - title: "@ClearSystemProperty and @SetSystemProperty"
         url: /docs/system-properties/
+      - title: "Range Sources"
+        url: /docs/range-sources
