Add trailing slashes to doc nav URLs

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -1,3 +1,5 @@
+# NOTE: The URLs need a trailing slash or the selected nav element
+#       won't be highlighted.
   - title: Features
     children:
       - title: "@ClearSystemProperty and @SetSystemProperty"
@@ -5,9 +7,9 @@
       - title: "@DefaultLocale and @DefaultTimeZone"
         url: /docs/default-locale-timezone/
       - title: "Range Sources"
-        url: /docs/range-sources
+        url: /docs/range-sources/
       - title: "@RepeatFailedTest"
-        url: /docs/repeat-failed-test
+        url: /docs/repeat-failed-test/
       - title: "TempDirectory"
         url: /docs/temp-directory/
       - title: "Vintage @Test"
