Add @ReportEntry for declarative TestReporter entries
This commit adds the basic features of a @ReportEntry extension. It
allows annotating a test case with one or multiple key/value pairs,
which are then published via `TestReporter`.

PR: #183
Closes: #134 

[ci skip-release]

--- a/docs/docs-nav.yml
+++ b/docs/docs-nav.yml
@@ -10,6 +10,8 @@
         url: /docs/range-sources/
       - title: "@RepeatFailedTest"
         url: /docs/repeat-failed-test/
+      - title: "Report entries"
+        url: /docs/report-entries/
       - title: "TempDirectory"
         url: /docs/temp-directory/
       - title: "Vintage @Test"
