Deactivate broken site build (again)
`TriggerSiteBuild` is currently not working, but that should not stop the entire build.

Issue: junit-pioneer/junit-pioneer.github.io#5
PR: #235

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,11 +39,12 @@ deploy:
     file: "./build/libs/junit-pioneer-*.jar"
     on:
       tags: true
-  - provider: script
-    skip_cleanup:
-    script: ./gradlew triggerSiteBuild -P travisApiToken=$TRAVIS_API_TOKEN --stacktrace
-    on:
-      branch: master
+# Commenting this out so our travis build is happy      
+#  - provider: script
+#    skip_cleanup:
+#    script: ./gradlew triggerSiteBuild -P travisApiToken=$TRAVIS_API_TOKEN --stacktrace
+#    on:
+#      branch: master
 
 env:
   global:
