Document maintainer team in CONTRIBUTING
By extending the team of JUnit Pioneer maintainers, it becomes
important to create and document the collaborative process (however
loose it may be) as it applies to:

* duties
* communication
* team decisions, e.g. regarding PRs
* expectations of availability and responsibility

This change describes those details in `CONTRIBUTING.md`.

Issue: #226
PR: #239 

[ci skip-release]

--- a/gradle/shipkit.gradle
+++ b/gradle/shipkit.gradle
@@ -8,7 +8,7 @@ shipkit {
    gitHub.writeAuthToken = System.getenv('GITHUB_WRITE_TOKEN')
 
    // Needed for uploading to Maven Central
-   team.developers = ['nicolaiparlog:Nicolai Parlog']
+   team.developers = ['nicolaiparlog:Nicolai Parlog', 'smoyer64:Steve Moyer', 'Bukama:Matthias Bünger', 'aepfli:Simon Schrottner']
 }
 
 allprojects {
